Fix: doc: Weird spacing before function arguments

--- a/doc/style.css
+++ b/doc/style.css
@@ -1,1 +1,1 @@
-.memproto tr, .memproto td { display: inline-block }
+.paramtype { display: none }
